@@ -37,51 +37,46 @@ public class Drivetime extends Endpoint {
     @Override
     public void handleGet(HttpExchange r) throws IOException, JSONException {
         try{
+
             String[] splitUrl = r.getRequestURI().getPath().split("/");
             if (splitUrl.length != 4) {
                 this.sendStatus(r, 400);
                 return;
             }
 
-            ObjectId tripId = null;
-            String trip_id = splitUrl[2];
-            try {
-                tripId = new ObjectId(trip_id);
-            } catch (IllegalArgumentException e) {
-                e.printStackTrace();
+            String trip_id = splitUrl[3];
+            if (!ObjectId.isValid(trip_id)) {
+                System.out.println(trip_id);
+                System.out.println("error id");
                 this.sendStatus(r, 400);
                 return;
             }
-
-            if(!this.dao.tripExists(tripId)){
+            if(!this.dao.tripExists(new ObjectId(trip_id))){
                 this.sendStatus(r, 404);
             }
-            ArrayList<String> tripInfo = this.dao.tripInfo(tripId);
+            
+            ArrayList<String> tripInfo = this.dao.tripInfo(new ObjectId(trip_id));
             String driver = tripInfo.get(0);
             String passenger = tripInfo.get(1);
             String endpoint = "http://locationmicroservice:8000/location/navigation/:%s?passengerUid=%s";
             endpoint = String.format(endpoint, driver, passenger);
             System.out.println(endpoint);
 
-            URL url = new URL(endpoint);
-            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-            conn.setRequestMethod("GET");
-            conn.setConnectTimeout(5000);
-            conn.setReadTimeout(5000);
-            int status = conn.getResponseCode();
+            HttpClient client = HttpClient.newHttpClient();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(endpoint))
+                    .header("Content-Type", "application/json")
+                    .GET()
+                    .build();
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+            int status = response.statusCode();
             if(status != 200){
                 this.sendStatus(r, status);
                 return;
             }
-            BufferedReader in = new BufferedReader(new InputStreamReader(conn.getInputStream()));
-            String inputLine;
-            StringBuilder response = new StringBuilder();
-            while ((inputLine = in.readLine()) != null) {
-                response.append(inputLine);
-            }
-            in.close();
+
             //Read JSON response and print
-            JSONObject myResponse = new JSONObject(response.toString());
+            JSONObject myResponse = new JSONObject(response.body());
             JSONObject data = myResponse.getJSONObject("data");
             JSONObject var = new JSONObject();
             var.put("arrival_time", data.getInt("total_time"));
